--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,12 @@
 			<attribute name="javadoc_location" value="file:/C:/Users/ryan2/Downloads/jaad-0.8.4-doc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Libraries/vlcj-3.10.1-dist/vlcj-3.10.1/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Libraries/vlcj-3.10.1-dist/vlcj-3.10.1/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Libraries/vlcj-3.10.1-dist/vlcj-3.10.1/vlcj-3.10.1.jar" sourcepath="C:/Program Files/Java/Libraries/vlcj-3.10.1-dist/vlcj-3.10.1/vlcj-3.10.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Program%20Files/Java/Libraries/vlcj-3.10.1-dist/vlcj-3.10.1/vlcj-3.10.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
